--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-simple-strings",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "A simple localization system for JS.",
   "repository": {
     "type": "git",
@@ -21,5 +21,6 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "mocha": "*"
-  }
+  },
+  "license": "MIT"
 }
